Fixed- some material ui icons  not showing

--- a/react-app/whatsapp/src/App.css
+++ b/react-app/whatsapp/src/App.css
@@ -4,9 +4,10 @@
   background-color: rgb(180, 180, 180);
   height: 100vh;
 }
-.app-body {
+.app_body {
   display: flex;
   background-color: #ededed;
+  border-radius: 10px;
   height: 90vh;
   width: 90vw;
   box-shadow: -1px 4px 20px -6px rgba(0, 0, 0, 0.7);
